# sedutil

./: .gitignore  .gitmodules  BUILDING  CONTRIBUTING  DTA_Contributor_Agreement_v2.docx  Doxyfile  GitVersion.ps1  GitVersion.sh  Jenkinsfile  Makefile  Makefile.am  ManualBuild.sh  N.py  OpalLock.py  PyExtLic.pyd  PyExtOb.pyd  README.md  README_LTS.txt  README_build_win32.txt  TODO.txt  Version.h  background.py  background.pyd  background.pyi  build.sh  cifra  cleanop.py  cleanop.pyd  cleanop.pyi  configure.ac  dialogs.py  dialogs.pyi  lockhash.py  lockhash.pyd  lockhash.pyi  msed.sln  msed.vcxproj  msed.vcxproj.filters  nvme.tbz  powerset.py  (+25 more)
CI/: clean_make_tools  clean_out_DerivedData  driver_version  dx  git-version  install_dmgbuild  install_from_iso  list_iso_files  load_driver  macos_name  make_release_tools_iso  make_sed_iso  recovery_boot  uninstall_from_iso  xcode
Common/: ATAStructures.h  Copyright.txt  Customizations  DtaAnnotatedDump.cpp  DtaAnnotatedDump.h  DtaAtaDrive.cpp  DtaAtaDrive.h  DtaAudit.h  DtaAuthorize.cpp  DtaAuthorize.h  DtaAuthorizeSedutilExecution.h  DtaBlockStorageDevice.cpp  DtaBlockStorageDevice.h  DtaCommand.cpp  DtaCommand.h  DtaConstants.h  DtaDev.cpp  DtaDev.h  DtaDevEnterprise.cpp  DtaDevEnterprise.h  DtaDevFactory.cpp  DtaDevGeneric.cpp  DtaDevGeneric.h  DtaDevLoadPBA.cpp  DtaDevOS.cpp  DtaDevOS.h  DtaDevOSDrive.cpp  DtaDevOSDrive.h  DtaDevOpal.cpp  DtaDevOpal.h  DtaDevOpal1.cpp  DtaDevOpal1.h  DtaDevOpal2.cpp  DtaDevOpal2.h  DtaDevOpalite.cpp  DtaDevOpalite.h  DtaDevPyrite.cpp  DtaDevPyrite.h  DtaDevPyrite1.cpp  DtaDevPyrite1.h  (+88 more)
Contrib/: sed-opal.service  systemd-opal.service
DEBIAN/: control  copyright
FHAuthorize/: DtaAuthorize.cpp
License/: Demo 1.0.lw.xml  LicenseValidator.cpp  LicenseValidator.h  include.h  stdafx.cpp  stdafx.h
LinuxPBA/: GetPassPhrase.cpp  GetPassPhrase.h  LinuxPBA.cpp  Network.cpp  Network.h  UnlockSEDs.cpp  UnlockSEDs.h
OpalLock.build/: .sconsign-27.dblite  @sources.tmp  __constants.cpp  __frozen.cpp  __helpers.cpp  __helpers.h  module.__internal__.cpp  module.__parents_main__.cpp  module.cairo.cpp  module.cleanop.cpp  module.dialogs.cpp  module.gio.cpp  module.glib.cpp  module.glib.option.cpp  module.gobject.constants.cpp  module.gobject.cpp  module.gobject.propertyhelper.cpp  module.gtk._lazyutils.cpp  module.gtk.cpp  module.gtk.deprecation.cpp  module.multiprocessing-postLoad.cpp  module.multiprocessing-preLoad.cpp  module.powerset.cpp  module.runop.cpp  module.runtime.cpp  scons-report.txt
OpalLock.dist/: Demo 1.0.lw.xml  PyExtHash.pyd  atk.pyd  pango.pyd  pangocairo.pyd  runprocess.pyd  runscan.pyd  runsetup.pyd  runthread.pyd  runupdate.pyd  verify.pyd
PBKDF2verify/: PBKDF2verify.cpp  PBKDF2verify.vcxproj  PBKDF2verify.vcxproj.filters  ReadMe.txt  targetver.h
PyExt/: PyExt.vcxproj  PyExt.vcxproj.filters  README.txt  buildlic.sh  lic.cpp  setup.py
cryptopp/: GNUmakefile  cryptlib.vcxproj  cryptlib.vcxproj.filters
debian/: changelog  control  copyright  rules  sedutil.manpages
docs/: sedutil-cli.8
freebsd/: DtaDevFreeBSDCAM.cpp  DtaDevFreeBSDCAM.h  DtaDevFreeBSDDrive.h  DtaDevFreeBSDNvme.cpp  DtaDevFreeBSDNvme.h  DtaDevFreeBSDSata.cpp  DtaDevFreeBSDSata.h  DtaDevOS.cpp  DtaDevOS.h  GitVersion.sh  os.h
hash/: PyExtHash-1.0-cp39-cp39-macosx_10_9_universal2.whl  PyExtTest.py  PyExtTestHash.py  buildhash.sh  hash.vcxproj  hash.vcxproj.filters  install_PyExtHash  setup.py  uninstall_PyExtHash
images/: BUILDING  Dockerfile  README.md  autobuild.sh  build  buildUEFI64  buildUEFI64-A  buildUEFI64-B  buildbios  buildbiosLinux  buildbiospba  buildpbaroot  buildrescue  conf  docker-build  getresources  legacypba  makeallimages  setupautounlock
linux/: .#DtaDevOS.cpp  DtaConstants.h  DtaDevFactory.cpp  DtaDevLinuxBlockStorageDevice.cpp  DtaDevLinuxBlockStorageDevice.h  DtaDevLinuxDrive.cpp  DtaDevLinuxDrive.h  DtaDevLinuxNvme.cpp  DtaDevLinuxNvme.h  DtaDevLinuxNvmeMi.cpp  DtaDevLinuxNvmeMi.h  DtaDevLinuxNvmeStructsOpCodes.h  DtaDevLinuxSA.cpp  DtaDevLinuxSA.h  DtaDevLinuxSata.cpp  DtaDevLinuxSata.h  DtaDevLinuxScsi.cpp  DtaDevLinuxScsi.h  DtaDevLinuxSerialAttachmentDrive.cpp  DtaDevLinuxSerialAttachmentDrive.h  DtaDevLinuxTPer.cpp  DtaDevLinuxTPer.h  DtaDevLinuxTPer_SAT.cpp  DtaDevLinuxTPer_SAT.h  DtaDevLinuxTPer_SCSI.cpp  DtaDevLinuxTPer_SCSI.h  DtaDevOS.cpp  DtaDevOS.h  DtaDevOSDrive.cpp  DtaDevOSDrive.h  DtaDevOSFactory.cpp  DtaLinux.cpp  DtaLinux.h  DtaLinuxAtaDrive.cpp  DtaLinuxAtaDrive.h  DtaLinuxBlockStorageDevice.cpp  DtaLinuxBlockStorageDevice.h  DtaLinuxDriveFactory.cpp  DtaLinuxNvmeDrive.cpp  DtaLinuxNvmeDrive.h  (+20 more)
log/: log.cpp  log.h
macos/: #Version.h#  .gitignore  BrightPlazaTPer copy-Info.plist  CLI  DtaBlockStorageDevice.cpp  DtaBlockStorageDevice.h  DtaDevDriveFactory.cpp  DtaDevDriveFactory.h  DtaDevFactory.cpp  DtaDevMacOSBlockStorageDevice.cpp  DtaDevMacOSBlockStorageDevice.h  DtaDevMacOSDrive.cpp  DtaDevMacOSDrive.h  DtaDevMacOSSata.cpp  DtaDevMacOSSata.h  DtaDevMacOSScsi.cpp  DtaDevMacOSScsi.h  DtaDevMacOSTPer.cpp  DtaDevMacOSTPer.h  DtaDevMacOSTPer_SAT.cpp  DtaDevMacOSTPer_SAT.h  DtaDevMacOSTPer_SCSI.cpp  DtaDevMacOSTPer_SCSI.h  DtaDevMacOS_ATA.cpp  DtaDevMacOS_ATA.h  DtaDevMacOS_UAS_SAT.cpp  DtaDevMacOS_UAS_SAT.h  DtaDevOS.cpp  DtaDevOS.h  DtaDevOSDrive.h  DtaDevOSFactory.cpp  DtaMacOS.cpp  DtaMacOS.h  DtaMacOSAtaDrive.cpp  DtaMacOSAtaDrive.h  DtaMacOSBlockStorageDevice.cpp  DtaMacOSBlockStorageDevice.h  DtaMacOSConstants.h  DtaMacOSDriveFactory.cpp  DtaMacOSNvmeDrive.cpp  (+10 more)
msed/: Class_Skeleton.cpp  Class_Skeleton.h  Copyright.txt  Copyrite.txt  D0Structures.h  Device.h  Device_common.cpp  Discovery0.cpp  Discovery0.h  DiskList.cpp  DiskList.h  Endianfixup.h  HexDump.cpp  HexDump.h  MsedAnnotatedDump.cpp  MsedAnnotatedDump.h  MsedBaseDev.cpp  MsedBaseDev.h  MsedCommand.cpp  MsedCommand.h  MsedConstants.h  MsedDev.cpp  MsedDev.h  MsedDevEnterprise.cpp  MsedDevEnterprise.h  MsedDevGeneric.cpp  MsedDevGeneric.h  MsedDevOpal.cpp  MsedDevOpal.h  MsedDevOpal1.cpp  MsedDevOpal1.h  MsedDevOpal2.cpp  MsedDevOpal2.h  MsedEndianFixup.h  MsedHashPwd.cpp  MsedHashPwd.h  (+51 more)
rc/: fs.cmd  (+6 more)
(+752 files in other folders)
